--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -62,14 +62,11 @@ Mappings:
       abbreviation: prod
   ALBListenerRulePriorityMap:
     Publish:
-      http: 1
-      https: 1
+      prefix: 30
     Audiogram:
-      http: 2
-      https: 2
+      prefix: 20
     Castle:
-      http: 3
-      https: 3
+      prefix: 10
 Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
@@ -149,8 +146,7 @@ Resources:
         PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
         PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-        PlatformALBHTTPListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Castle, http]
-        PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Castle, https]
+        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
@@ -167,7 +163,7 @@ Resources:
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   ##############################################################################
-  #### AUDIOGRAMS ##############################################################
+  #### AUDIOGRAM ###############################################################
   ##############################################################################
   AudiogramStack:
     Type: "AWS::CloudFormation::Stack"
@@ -182,8 +178,7 @@ Resources:
         PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
         PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-        PlatformALBHTTPListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Audiogram, http]
-        PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Audiogram, https]
+        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Audiogram, prefix]
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
