Differentiate staging and production platform certs

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -2,6 +2,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a wildcard ACM certificate for the standard VPC created by the root
   stack (eg *.vpc-af124354.prx.tech)
+Conditions:
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   VPC:
      Type: "AWS::EC2::VPC::Id"
@@ -16,7 +18,7 @@ Resources:
         - ValidationDomain: prx.tech
           DomainName: !Sub "*.${VPC}.prx.tech"
       SubjectAlternativeNames:
-        - "*.staging.prx.tech"
+        - !If [IsProduction, "*.prx.tech", "*.staging.prx.tech"]
       Tags:
         - Key: Project
           Value: platform.prx.org
