Add missing CD parameter label

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -48,6 +48,8 @@ Metadata:
         default: Access token
       InfrastructureConfigStagingKey:
         default: Staging S3 object key
+      InfrastructureConfigProductionKey:
+        default: Production S3 object key
 Parameters:
   InfrastructureStorageStackName:
     Default: infrastructure-storage
