--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -38,7 +38,7 @@ Parameters:
     Type: String
   CastleSecretsVersion:
     Type: String
-  PublishECRImageTag:
+  PublishEcrImageTag:
     Type: String
   PublishSecretsVersion:
     Type: String
