--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -112,6 +112,19 @@ Resources:
             - castle-staging.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
+  CastleALBHTTPHostProductionGenericListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref CastleALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - castle.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 02]]
   CastleALBHTTPSHostVPCListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -135,6 +148,19 @@ Resources:
         - Field: host-header
           Values:
             - castle.staging.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 12]]
+  CastleALBHTTPSHostProductionGenericListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref CastleALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - castle.prx.tech
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 12]]
   CastleALBHTTPSHostStagingGenericAltListenerRule:
