--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -99,6 +99,19 @@ Resources:
             - publish.staging.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 02]]
+  PublishALBHTTPHostProductionGenericListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PublishALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - publish.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 02]]
   PublishALBHTTPHostStagingGenericAltListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Condition: CreateStagingResources
@@ -135,6 +148,19 @@ Resources:
         - Field: host-header
           Values:
             - publish.staging.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 12]]
+  PublishALBHTTPSHostProductionGenericListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateProductionResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PublishALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - publish.prx.tech
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 12]]
   PublishALBHTTPSHostStagingGenericAltListenerRule:
