Add pipeline start notification

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -748,6 +748,18 @@ Resources:
               OutputArtifacts:
                 - Name: RepoStateArtifact
               RunOrder: 1
+            - Name: DeploymentNotification
+              ActionTypeId:
+                Category: Invoke
+                Owner: AWS
+                Provider: Lambda
+                Version: 1
+              Configuration:
+                FunctionName: !Ref DeploymentNotificationFunction
+                UserParameters: Start
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
         - Name: Staging
           Actions:
             - Name: StagingDeploy
