Add Play root parameters

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -42,6 +42,10 @@ Parameters:
     Type: String
   PublishSecretsVersion:
     Type: String
+  PlayEcrImageTag:
+    Type: String
+  PlaySecretsVersion:
+    Type: String
   # Coming Soon
   # UploadGitCommit:
   #   Type: String
