Try a deregistration delay

--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -65,6 +65,9 @@ Resources:
       Name: !Sub publish-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+        - Value: 15
       Tags:
         - Key: Project
           Value: !FindInMap [Shared, Project, name]
