--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -67,7 +67,7 @@ Resources:
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-        - Value: 15
+          Value: 15
       Tags:
         - Key: Project
           Value: !FindInMap [Shared, Project, name]
