--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -260,7 +260,7 @@ Resources:
   #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
   #     TimeoutInMinutes: "5"
   ##############################################################################
-  #### PUBLISH #################################################################
+  #### PLAY ####################################################################
   ##############################################################################
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
@@ -305,7 +305,7 @@ Outputs:
     Description: Domain name for publish app
     Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
   PlayHostedZoneDNSName:
-    Description: Domain name for publish app
+    Description: Domain name for play app
     Value: !GetAtt PlayStack.Outputs.HostedZoneDNSName
   # CmsHostedZoneDNSName:
   #   Description: Domain name for CMS app
