Add prx.org listener rules for play stack

--- a/stacks/play.prx.org.yaml
+++ b/stacks/play.prx.org.yaml
@@ -125,6 +125,19 @@ Resources:
             - play-staging.prx.tech
       ListenerArn: !Ref PlatformALBHTTPListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
+  PlayALBHTTPHostProductionGenericAltListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateStagingResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PlayALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - play.prx.org
+      ListenerArn: !Ref PlatformALBHTTPListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
   PlayALBHTTPSHostVPCListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
@@ -174,6 +187,19 @@ Resources:
         - Field: host-header
           Values:
             - play-staging.prx.tech
+      ListenerArn: !Ref PlatformALBHTTPSListenerArn
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 13]]
+  PlayALBHTTPSHostProductionGenericAltListenerRule:
+    Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
+    Condition: CreateStagingResources
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref PlayALBTargetGroup
+          Type: forward
+      Conditions:
+        - Field: host-header
+          Values:
+            - play.prx.org
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 13]]
   # ECS Service
