Set deregistration delay for Play ALB target group

--- a/stacks/play.prx.org.yaml
+++ b/stacks/play.prx.org.yaml
@@ -72,6 +72,9 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub Play-${EnvironmentType}
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+        - Value: 15
       VpcId: !Ref VPC
   # ALB Listener Rules
   PlayALBHTTPHostVPCListenerRule:
