--- a/stacks/play.prx.org.yaml
+++ b/stacks/play.prx.org.yaml
@@ -74,7 +74,7 @@ Resources:
           Value: !Sub Play-${EnvironmentType}
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-        - Value: 15
+          Value: 15
       VpcId: !Ref VPC
   # ALB Listener Rules
   PlayALBHTTPHostVPCListenerRule:
