Add deploys count custom metric tracking

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -552,6 +552,7 @@ Resources:
       Environment:
         Variables:
           DEPLOY_NOTIFICATION_TOPIC_ARN: !Ref DeployNotificationsSnsTopic
+          CD_STACK_NAME: !Ref AWS::StackName
       Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
