Fix deploy notifications Lambda permissions for CloudWatch metrics

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -198,6 +198,14 @@ Resources:
                   - "codepipeline:PutJobSuccessResult"
                   - "codepipeline:PutJobFailureResult"
                 Resource: "*"
+        - PolicyName: CloudWatchMetricsPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cloudwatch:PutMetricData"
+                Resource: "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   CodePipelineIAMRole:
