Fix configs; hardcode buildspec

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -959,9 +959,7 @@ Resources:
         ComputeType: BUILD_GENERAL1_SMALL
         EnvironmentVariables:
           - Name: DOVETAIL_HOST
-            Value: https://dovetail-staging.prxu.org
-          - Name: DOVETAIL_PROD
-            Value: https://dovetail.prxu.org
+            Value: dovetail-staging.prxu.org
           - Name: DOVETAIL_PROD_HOST
             Value: dovetail.prxu.org
           - Name: FEEDER_HOST
@@ -971,13 +969,14 @@ Resources:
           - Name: PUBLISH_USER
             Value: test@test.com
           - Name: PUBLISH_PASS
-            Value: test
+            Value: test1234
         Image: 561178107736.dkr.ecr.us-east-1.amazonaws.com/meta.prx.org:latest
         Type: LINUX_CONTAINER
       # If this Name changes, the CodeBuild role policy needs to change too
       Name: !Sub ${AWS::StackName}-Acceptance
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
+        BuildSpec: "version: 0.1\nphases:\n  pre_build:\n    commands:\n      - bundle install\n  build:\n    commands:\n      - bundle exec rake\nartifacts:\n  files:\n    - README.md"
         Type: CODEPIPELINE
       Tags:
         - Key: Project
