Re-init acceptance tests

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -847,21 +847,21 @@ Resources:
               InputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
               RunOrder: 2
-        # - Name: Testing
-        #   Actions:
-        #     - Name: Acceptance
-        #       ActionTypeId:
-        #         Category: Build
-        #         Owner: AWS
-        #         Provider: CodeBuild
-        #         Version: 1
-        #       Configuration:
-        #         ProjectName: !Ref AcceptanceTestBuildProject
-        #       InputArtifacts:
-        #         - Name: MetaRepoSourceArtifact
-        #       OutputArtifacts:
-        #         - Name: AcceptanceTestArtifact
-        #       RunOrder: 1
+        - Name: Testing
+          Actions:
+            - Name: Acceptance
+              ActionTypeId:
+                Category: Build
+                Owner: AWS
+                Provider: CodeBuild
+                Version: 1
+              Configuration:
+                ProjectName: !Ref AcceptanceTestBuildProject
+              InputArtifacts:
+                - Name: MetaRepoSourceArtifact
+              OutputArtifacts:
+                - Name: AcceptanceTestArtifact
+              RunOrder: 1
         - Name: Production
           Actions:
             - Name: GetProductionConfig
